// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`../index.js <MainBar /> (hide mobile bar false) should render 1`] = `
<div
  className="lib-react-main_bar-responsivePadding({'paddingLeft':0,'paddingBottom':64,'theme.breakpoints.up('sm')':{'paddingLeft':81,'paddingBottom':0},'theme.breakpoints.up('md')':{'paddingLeft':0}})"
>
  <div
    className="responsive-layout"
  >
    <div
      className="tablet"
    >
      <div>
        TabletDrawer
      </div>
    </div>
    <div
      className="mobile"
    >
      <div>
        MobileBar
      </div>
    </div>
  </div>
  children
</div>
`;

exports[`../index.js <MainBar /> (hide mobile bar true) should render 1`] = `
<div
  className="lib-react-main_bar-responsivePadding({'paddingLeft':0,'paddingBottom':64,'theme.breakpoints.up('sm')':{'paddingLeft':81,'paddingBottom':0},'theme.breakpoints.up('md')':{'paddingLeft':0}})"
>
  <div
    className="responsive-layout"
  >
    <div
      className="tablet"
    >
      <div>
        TabletDrawer
      </div>
    </div>
    <div
      className="mobile"
    />
  </div>
  children
</div>
`;

exports[`../index.js should use the right versions of its dependencies 1`] = `
Object {
  "@material-ui/core": "^4.5.0",
  "prop-types": "^15.7.2",
  "react": "^16.10.1",
}
`;
